--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+Add a Page
+{% endblock %}
 
+{% block body_block %}
     <body>
         <h1>Add a Page</h1>
         <div>
@@ -21,5 +21,4 @@
                 {% endfor %}
             <input type="submit" name="submit" value="Add Page" />
         </div>
-    </body>
-</html>
+{% endblock %}
