Passed chapter 9 tests

--- a/templates/rango/categories.html
+++ b/templates/rango/categories.html
@@ -6,6 +6,6 @@
     <strong></strong>
     </li>
     {% else %}
-    <li><a href="{% url 'rango:show_category' c.slug}">{{ c.name }}</a></li>
+    <li><a href="{% url 'rango:show_category' c.slug %}">{{ c.name }}</a></li>
     {% endif %}
 {% endfor %}
