--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -9,17 +9,21 @@ Homepage
 <h1>Rango says...</h1>
 
 <div>
-    hey there partner! <br />
+    {% if  user.is_authenticated %}
+        howdy {{ user.username }}!
+    {% else %}
+        hey there partner!
+    {% endif %}
     <strong>{{ boldmessage }}</strong><br /> 
 </div>
 
     <div>
-        <h2>Most Liked Categories</h2>
+    <h2>Most Liked Categories</h2>
     {% if categories %}
         <ul>
         {% for category in categories %}
             <li>
-                <a href="{% url 'rango:show_category' category.slug %'}">{{ category.name }}</a>
+                <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
             </li>
         {% endfor %}
         </ul>
