--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,6 +12,8 @@ About Rango
             here is the about page. <br />
             <strong>This tutorial has been put together by Hannah</strong><br /> 
         </div>
+
+        <p>Visits: {{ visits }}</p>
         
         <div>
             <img src="/static/images/rango.jpg" alt="Picture of Rango" />
